src/App.css
@import url("https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css");

@import url('https://fonts.googleapis.com/css?family=Roboto');


html,
body,
#root {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
    background: rgb(155, 200, 215);
    font-family: Roboto;
}

* {
    /* border: 1px solid black !important; */
}

a {
    text-decoration: none;
    color: #FFF;
}

::-webkit-scrollbar {
    display: none;
}

/* THEME */

#logo-wrapper {
    position: fixed;
    top: 0;
    left: 0;
    width: 12.5vw;
    height: 12.5vw;
    /* responsive heights */
    min-width: 100px;
    min-height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
}

#logo-circle {
    height: 85px;
    width: 85px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50px;
    background: rgba(255, 255, 255, 0.25);
    /* background: rgba(15, 230, 255, 0.6); */
    /* background: rgba(85, 25, 140, 0.6); */
}

#logo {
    height: 75px;
    transform: translateX(3px) rotate(-2deg);
    opacity: 0.7;
}

h1 {
    font-size: 3rem;
}

h2 {

    font-size: 2.25rem;
}

h3 {
    font-size: 1.5rem;
}

h4 {
    font-size: 1.5rem;
}

h1, h2, h3, h4 {
    margin-bottom: 1.75rem;
    line-height: 130%
}

p {
    font-size: 1.175rem;
    line-height: 145%;
    margin-bottom: 1rem;
}



/* VIEW TRANSITIONS */

.previous-left-margin, .previous-right-margin, .current-left-margin, .current-right-margin, .next-left-margin, .next-right-margin {
    position: fixed;
    top: 0;
    bottom: 0;
    width: 22.5vw;
    min-width: 22.5vw;
    height: 100vh;
    /* background: rgba(0,0,0,0.25); */
    transition: left 0.8s;
}

.previous-left-margin, .current-left-margin, .next-left-margin {
    background-image: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.325))
}

.previous-right-margin, .current-right-margin, .next-right-margin {
    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.325), transparent)
}

.current-left-margin {
    left: 0;
}

.current-right-margin {
    left: 77.5vw;
}

.previous-left-margin {
    left: -150vw;
}

.previous-right-margin {
    left: -72.5vw;
}

.next-left-margin {
    left: 150vw;
}

.next-right-margin {
    left: 227.5vw;
}

.content {
    padding: 10vw 0;
    margin: 0 22.5vw;
    display: flex;
    flex-direction: column;
    height: unset;
    min-height: calc(100vh - 20vw);
    background: rgba(255, 255, 255, 0.325);
}

.previous, .current, .next {
    transition: left 0.8s;
    position: fixed;
    top: 0;
    width: 100vw;
    height: 100vh;
    /* display: flex; */
    /* align-content: stretch; */
    /* justify-content: stretch; */
}

.previous {
    left: -150vw;
    overflow: hidden;
}

.current {
    left: 0;
    overflow: scroll;
    -ms-overflow-style: none;
}

.next {
    left: 150vw;
    overflow: hidden;
}

@media(min-width: 500px) {

    .mobile-only {
        display: none;
    }

}

@media(max-width: 500px) {

    html, body, #root {
        height: auto;
        /* background: rgb(155, 200, 215); */
    }

    
    .previous-left-margin, .previous-right-margin, .current-left-margin, .current-right-margin, .next-left-margin, .next-right-margin {
        display: none
    }
    
    .content {
        margin: 3rem 2rem 5rem;
        background: transparent;
    }

    .current {
        position: static;
        height: auto;
        overflow: visible;
    }

    #logo-wrapper, #scrollbar, .previous, .next {
        display: none;
    }

}

